--- a/vasu.html
+++ b/vasu.html
@@ -53,7 +53,7 @@
   <tr>
     <th><img src="V:\project\watch.jpeg" width="75%"></th>
     <th><img src="V:\project\wallet.jpeg" width="75%"></th>
-    <th><img src="V:\project\sparx.jpeg" width="75%"></th>
+    <th><img src="https://vaibhav9936-coder.github.io/College-Project/sparx.jpeg" width="75%"></th>
   </tr>
 </table>
 <br>
