--- a/veom/vasu.html
+++ b/veom/vasu.html
@@ -42,7 +42,7 @@
   <tr>
     <th><img src="V:\project\desktop.jpeg" width="35%" height="20%"></th>
     <th><img src="V:\project\furniture.jpeg" width="55%" height="20%"></th>
-    <th><img src="V:\project\sunglass.jpeg" width="50%" height="30%"></th>
+    <th><img src="https://raw.githubusercontent.com/Vaibhav9936-coder/College-Project/master/veom/sunglass.jpeg" width="50%" height="30%"></th>
   </tr>
 </table>
 <br>
